--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <body>
      <nav>
         <a href="https://tanyanm.github.io/portal/">portal (2-1)</a>
-        <a href="">terraria</a>
-        <a class="fre" href="">minecraft</a>
-        <a href="">DDNET</a>
+        <a href="https://tanyanm.github.io/terratia/">terraria</a>
+        <a href="https://tanyanm.github.io/minecraft/">minecraft</a>
+        <a class="frae" href="https://tanyanm.github.io/ddnet/">DDNET</a>
         </nav>
     <h2>3 гра</h2>
     <h1>minecraft</h1>
